--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@ body{
     background-color: black;
     color: white;
     font-family: 'Montserrat', sans-serif;
+    height: 100%;
+    padding-top:40px;
 }
 .area-content{
     padding-top: 300px;
@@ -27,37 +29,28 @@ nav{
 }
 .hero-area{
     padding-bottom:30px;
-    /* position: absolute; */
-}
-.hero-area img{
-    height:85%;
-    width:25%;
-    /* vertical-align: middle; */
-    /* bottom: 10; */
-    /* margin-right: 0; */
-    right: 7.5%;
-    position: rela;
-    /* max-height: 500px; */
-    
-}
-.hero-image{
-    margin-right: 0;
-    /* opacity: var(--opacity); */
-    
-    
-    
-}
-#justme{
-    /* height: 60%; */
-    position: absolute;
-    margin-top: 90px;
-    overflow: auto;
-    bottom: 40;
-    right: 0;
-    /* transform: translateX(var(--translateX)); */
-    /* will-change: transform; */
+    position: relative;
 }
 
+.hero-image{
+    background-image: url("../images/justme.png");
+    background-repeat: no-repeat;
+    background-position-x: 105%; 
+    display: block;
+    width: 80%;
+    height: 100%;
+    position: absolute;
+    bottom: 40;
+    right: 0;
+    overflow: auto;
+
+}
+#justme{
+    
+    margin-top: 90px;
+    overflow: auto;
+
+}
 .social-links{
     padding-top:190px;
     bottom:0;
@@ -65,6 +58,14 @@ nav{
 .typed-cursor {
     opacity: 1;
     animation: blink .7s infinite;
+}
+.skill ul li{
+    display: inline-block;
+    background-color: #eee;
+    color: black;
+    margin: 5px;
+    padding: 10px 20px;
+    text-transform: uppercase;
 }
 
 @keyframes blink {
@@ -79,10 +80,11 @@ nav{
     }
 }
 #aboutme{
-    height: 1000px;
-    padding:50px;
+    height: 80%;
+    padding: 50px;
     background-color: white;
     color: black;
+    overflow: auto;
     z-index: 100;
 }
 #aboutimage{
@@ -95,8 +97,6 @@ nav{
 }
 .scene {
     position: absolute;
-    /* display: block; */
-    
     bottom: 0;
 	width: 100%;
 	transform: translateY(var(--translateY));
@@ -115,18 +115,79 @@ nav{
     position: relative
     
 }
+#protitle{
+    padding-top: 20px;
+}
 #projects{
-    height: 330px;
-    z-index: 200;
     background-color: white;
     position: relative;
     color: black;
+    padding: 30px;
+}
+.single-portfolio{
+    height: 250px;
+    background-size: cover;
+    position: relative;
+    background-color: #ddd;
+    background-position: top;
+    overflow: hidden;
+    z-index: 1;
 }
 
+.single-portfolio:after{
+    position: absolute;
+    content: '';
+    left:0;
+    height: 0;
+    background-color: #000;
+    transition: .3s;
+    opacity: 0.5;
+    bottom: 0;
+    z-index: -1;
+}
 
+.single-portfolio:hover .portfolio-hover{
+    transition: 3s;
+    visibility: visible;
+    height: 140%;
+    opacity: 1;
+    
+}
+
+.portfolio-hover{
+    position: absolute;
+    width: 100%;
+    bottom: -75px;
+    padding: 15px;
+    z-index: 1;
+}
+ .portfolio-hover:hover{
+    position: absolute;
+    width: 100%;
+    padding-top: 310px; 
+    transition: 3s;
+    
+    /* left: 0; */
+    bottom: 0;
+    backface-visibility: hidden;
+} 
+#prorow{
+    margin-bottom: 30px;
+}
+#namelinks{
+    /* bottom: 0; */
+    background-color: #000;
+    color: white;
+    padding: 5px;
+    
+}
 /* 
 
 font-family: 'Montserrat', sans-serif;
 
 
  */
+footer{
+    height: 75px;
+     padding: 25px;
+ }
